// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating component matches snapshot for 0 1`] = `
<DocumentFragment>
  <span
    aria-label="Rating: 0 out of 5"
    class="rating"
  />
</DocumentFragment>
`;

exports[`Rating component matches snapshot for 1 1`] = `
<DocumentFragment>
  <span
    aria-label="Rating: 1 out of 5"
    class="rating"
  >
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Rating component matches snapshot for 2 1`] = `
<DocumentFragment>
  <span
    aria-label="Rating: 2 out of 5"
    class="rating"
  >
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Rating component matches snapshot for 2.25 1`] = `
<DocumentFragment>
  <span
    aria-label="Rating: 2.25 out of 5"
    class="rating"
  >
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="quarter-circle"
        data-testid="quarter-circle"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Rating component matches snapshot for 3 1`] = `
<DocumentFragment>
  <span
    aria-label="Rating: 3 out of 5"
    class="rating"
  >
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Rating component matches snapshot for 3.5 1`] = `
<DocumentFragment>
  <span
    aria-label="Rating: 3.5 out of 5"
    class="rating"
  >
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="half-circle"
        data-testid="half-circle"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Rating component matches snapshot for 4 1`] = `
<DocumentFragment>
  <span
    aria-label="Rating: 4 out of 5"
    class="rating"
  >
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Rating component matches snapshot for 4.75 1`] = `
<DocumentFragment>
  <span
    aria-label="Rating: 4.75 out of 5"
    class="rating"
  >
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="quarter-circle"
        data-testid="quarter-circle"
      />
      <span
        class="half-circle"
        data-testid="half-circle"
      />
    </span>
  </span>
</DocumentFragment>
`;

exports[`Rating component matches snapshot for 5 1`] = `
<DocumentFragment>
  <span
    aria-label="Rating: 5 out of 5"
    class="rating"
  >
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
    <span
      aria-hidden="true"
      class="circle-container"
    >
      <span
        class="full-circle"
        data-testid="full-circle"
      />
    </span>
  </span>
</DocumentFragment>
`;
